--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@ body,
 html {
     font-size: 1rem;
 }
+
+.root {
+    width: 100%;
+    height: 100vh;
+    background: url('./assets/images/bg-image.jpg') no-repeat center;
+    background-size: cover;
+    overflow: auto;
+}
