--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,28 @@ body {
 body,
 html {
     font-size: 1rem;
+    color: #fff;
 }
 
-.root {
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.app {
     width: 100%;
     height: 100vh;
     background: url('./assets/images/bg-image.jpg') no-repeat center;
     background-size: cover;
     overflow: auto;
+}
+
+.main {
+    background-color: rgba(16 18 27 / 40%);
+    border-radius: .5rem;
+    min-height: calc(100vh - 5rem);
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
